--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
 {% block page_content %}
 <div class="page-header">
   <h1>
+    Welcome to Lab4&5, Docker intro!
+  </h1>
+
+  <h1>
     Hello, 
       {% if name %}
         {{name}}
